--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,7 +218,7 @@ section {
 .trainer-bio h4 {
   font-weight: lighter;
   font-size: 26px; 
-  margin-bottom: 25px
+  margin-bottom: 25px;
 }
 
 .trainer-bio p {
