--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,7 +159,7 @@ section {
 }
 
 .steps span {
-  font-size: 38px; 
+  font-size: 38px;
 }
 
 .section-title {
@@ -187,13 +187,13 @@ section {
   width: 900px;
   margin: 0 auto 30px auto;
   background: #024e76;
-  color:#fce138;
+  color: #fce138;
   overflow: auto;
 }
 
-.trainer img{
+.trainer img {
   width: 35%;
-  float:left;
+  float: left;
 }
 
 .trainer-bio {
@@ -218,14 +218,22 @@ section {
   line-height: 1.3;
 }
 
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
 /* REACH OUT STYLES START */
-.contact{
+.contact {
   text-align: center;
   background: #024e76;
 }
 
 .contact h2 {
-  color:#fce138;
+  color: #fce138;
 }
 
 .contact-info iframe {
@@ -241,12 +249,14 @@ section {
   margin: 30px 0 0 60px;
   color: white;
 }
+
 .contact-info h3 {
-  color:#fce138;
+  color: #fce138;
   font-size: 32px;
 }
 
-.contact-info p, .contact-info address {
+.contact-info p,
+.contact-info address {
   margin: 20px 0;
   line-height: 1.5;
   font-size: 20px;
@@ -254,14 +264,7 @@ section {
 }
 
 .contact-info a {
-  color:#fce138
+  color: #fce138;
 }
+
 /* REACH OUT STYLES END */
-
-.text-left {
-  text-align: left;
-}
-
-.text-right {
-  text-align: right;
-}
