--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,13 +152,17 @@ section {
 
 
 /* SECTION TITLE STYLES START */
+
+/* removed 'display:padding' and 'margin-bottom' in section-title class*/
 .section-title {
   font-size: 55px;
   display: inline-block;
-  padding: 0 100px 20px 100px;
   border-bottom: 3px solid;
-  margin-bottom: 35px;
   color: #024e76;
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
 }
 
 .primary-border {
@@ -170,24 +174,17 @@ section {
 }
 /* SECTION TITLE STYLES END */
 
-/* WHAT WE DO STYLES */
-.intro {
-  text-align: center;
+/* Adding intro p */
+.intro p {
+text-align: center;
 }
 
-.intro p {
-  line-height: 1.7;
-  color: #39a6b2;
-  width: 80%;
-  margin: 0 auto;
-  font-size: 20px;
-}
+
 /* WHAT YOU DO STYLES END */
 
 
 /* WHAT YOU DO STYLES START */
 .steps { 
-  text-align: center;
   background: #fce138;
 }
 
@@ -217,9 +214,6 @@ section {
 /* WHAT YOU DO STYLES END */
 
 /* MEET THE TRAINERS START */
-.trainers {
-  text-align: center;
-}
 
 .trainer {
   width: 900px;
@@ -259,7 +253,6 @@ section {
 
 /* REACH OUT STYLES START */
 .contact {
-  text-align: center;
   background: #024e76;
 }
 
@@ -307,4 +300,9 @@ height: 400px;
 
 .text-right {
   text-align: right;
+}
+
+/* flex-row */
+.flex-row {
+  display: flex;
 }
